--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -16,6 +16,9 @@ jobs:                                # Job 설정
         
       - name: Install dependencies    # 의존 파일 설치
         run: yarn install
+
+      - name: Install react-router-dom
+        run: yarn add react-router-dom
       
       - name: Generate react build    # React Build
         run: yarn run build
