--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -19,6 +19,9 @@ jobs:                                # Job 설정
 
       - name: Install react-router-dom
         run: yarn add react-router-dom
+
+      - name: Install @chakra-ui/react
+        run: yarn add @chakra-ui/react
       
       - name: Generate react build    # React Build
         run: yarn run build
