--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -22,6 +22,9 @@ jobs:                                # Job 설정
 
       - name: Install @chakra-ui/react
         run: yarn add @chakra-ui/react
+       
+      - name: Install react-icons/fa
+        run: yarn add react-icons/fa
       
       - name: Generate react build    # React Build
         run: yarn run build
