--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -28,3 +28,9 @@ jobs:                                # Job 설정
       
       - name: Generate react build    # React Build
         run: yarn run build
+
+      - name: Deploy to Github Pages
+        uses: peaceiris/actions-gh-pages@v3.9.3
+        with:
+          github_token: ${{ secrets.MY_SECRET_KEY}}
+          publish_dir: ./src
