--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -15,6 +15,15 @@ jobs:
         uses: actions/setup-node@v2.1.2
         with:
           node-version: "20.12.2"
+        
+      - name: Install dependencies
+        run: yarn install
+
+      - name: Install react-router-dom
+        run: yarn add react-router-dom
+
+      - name: Install @chakra-ui/react
+        run: yarn add @chakra-ui/react
 
       - name: Cache dependencies
         uses: actions/cache@v2
