--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -20,13 +20,13 @@ jobs:
         run: npm install
 
       - name: Install react-router-dom
-        run: npm add react-router-dom
+        run: npm install react-router-dom
 
       - name: Install @chakra-ui/react
-        run: npm add @chakra-ui/react
+        run: npm install @chakra-ui/react
        
       - name: Install @chakra-ui/react
-        run: npm add react-icons
+        run: npm install react-icons
 
       - name: Cache dependencies
         uses: actions/cache@v2
