--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -24,6 +24,9 @@ jobs:
 
       - name: Install @chakra-ui/react
         run: npm i @chakra-ui/react @emotion/react @emotion/styled framer-motion
+
+      - name: Dev Dependencies
+        run: npm install --save-dev @babel/plugin-proposal-private-property-in-object
        
       - name: Install @chakra-ui/react
         run: npm install react-icons
