--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://yi-shuu.github.io/tuti-web-react",
+  "homepage": "/tuti-web-react/",
   "name": "tuti-test",
   "version": "0.1.0",
   "private": true,
